# pypipe

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: cli.rst  conf.py  index.rst  overview.rst  steps.rst
recipe/: meta.yaml
src/pypipe/: __init__.py  api.py  cli.py  decorators.py  models.py  registry.py  steps.py  test.py  trigger_event.py
src/pypipe/steps/: __init__.py  api.py  builtin.py
src/pypipe/transpilers/: github.py
tests/: test_api.py  test_basics.py  test_cli.py  test_job_decorator_golden.py  test_models.py  test_registry.py  test_steps.py
tests/golden/: test_default_pipeline_creation_with_push_and_pr.yml  test_job_decorator_basic.yml  test_job_decorator_checkout_params.yml  test_pipeline_creation_with_bool.yml  test_pipeline_creation_with_dict_triggers.yml  test_pipeline_creation_with_pr.yml  test_pipeline_creation_with_push.yml  test_pipeline_disable_push_with_empty_list.yml  test_pipeline_mixed_dict_and_string.yml
tests/transpilers/: test_github.py
