[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pypipe"
version = "0.1.0"
description = "A Python-native CI/CD framework for defining, testing, and transpiling pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ruamel.yaml>=0.18.0",
]

[project.optional-dependencies]
docs = [
    "sphinx"
]

[project.scripts]
pypipe = "pypipe.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

# If your code lives in src/pypipe/, tell hatchling to package it.
[tool.hatch.build.targets.wheel]
packages = ["src/pypipe"]

# Keep tox config tiny using legacy_tox_ini so we don't duplicate sections.
[tool.tox]
requires = ["tox>=4.18"]
legacy_tox_ini = """
[tox]
envlist = py311,py312,py313,py314,lint,typecheck
skip_missing_interpreters = true

[testenv]
deps =
    pytest>=8
    pytest-cov>=5
commands = pytest --cov=pypipe --cov-report=term --cov-report=xml

[testenv:lint]
deps = ruff>=0.6
commands = ruff check .

[testenv:typecheck]
deps = mypy>=1.11
commands = mypy src/pypipe
"""

# MyPy config (as you added)
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
pretty = true


[tool.coverage.run]
branch = true
source = ["pypipe"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
